--- a/index.html
+++ b/index.html
@@ -3,20 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dark Music Shop</title>
+  <title>Futuristic Music Shop</title>
   <!-- Tailwind CSS CDN -->
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <style>
     /* Custom styles */
     /* You can add additional custom styles here */
+    /* Fonts */
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
   </style>
 </head>
-<body class="bg-gray-900 text-white font-sans">
+<body class="bg-gray-900 text-white font-roboto">
 
   <!-- Navbar -->
   <nav class="bg-gray-800 py-6">
     <div class="container mx-auto flex justify-between items-center px-6">
-      <a href="#" class="text-lg font-semibold">Dark Music Shop</a>
+      <a href="#" class="text-lg font-semibold">Futuristic Music Shop</a>
       <ul class="flex space-x-4">
         <li><a href="#" class="hover:text-gray-300">Home</a></li>
         <li><a href="#" class="hover:text-gray-300">Products</a></li>
@@ -28,7 +30,7 @@
   <!-- Hero Section -->
   <section class="py-20 bg-gradient-to-r from-gray-900 to-gray-800">
     <div class="container mx-auto text-center">
-      <h1 class="text-4xl md:text-6xl font-semibold">Discover Your Sound</h1>
+      <h1 class="text-4xl md:text-6xl font-extrabold tracking-tight">Discover Your Sound</h1>
       <p class="mt-4 text-lg md:text-xl">Explore our wide range of instruments and gear.</p>
       <button class="mt-8 bg-blue-600 hover:bg-blue-700 text-white py-3 px-6 rounded-full uppercase text-sm tracking-wide font-semibold focus:outline-none focus:ring-2 focus:ring-blue-500">Shop Now</button>
     </div>
@@ -55,7 +57,7 @@
   <!-- Footer -->
   <footer class="bg-gray-800 py-6">
     <div class="container mx-auto text-center">
-      <p>&copy; 2024 Dark Music Shop. All rights reserved.</p>
+      <p>&copy; 2024 Futuristic Music Shop. All rights reserved.</p>
     </div>
   </footer>
 
